<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/editScheduleForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:orientation="vertical"
            android:padding="@dimen/standardPadding">

        <TextView
                android:id="@+id/scheduleFilmTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/scheduleDatePicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <DatePicker
                android:id="@+id/scheduleDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"
                app:layout_constraintBottom_toTopOf="@id/scheduleTimePicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scheduleFilmTitle" />

        <TimePicker
                android:id="@+id/scheduleTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scheduleDatePicker" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/removeFromSchedule"
                style="@style/Schedule.Form.Button"
                android:drawableTop="@drawable/ic_alarm_off"
                android:text="@string/remove"
                app:layout_constraintEnd_toStartOf="@id/cancelEditSchedule"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scheduleTimePicker" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelEditSchedule"
                style="@style/Schedule.Form.Button"
                android:drawableTop="@drawable/ic_cancel"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/submitEditSchedule"
                app:layout_constraintStart_toEndOf="@id/removeFromSchedule"
                app:layout_constraintTop_toBottomOf="@id/scheduleTimePicker" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitEditSchedule"
                style="@style/Schedule.Form.Button"
                android:drawableTop="@drawable/ic_alarm_on"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelEditSchedule"
                app:layout_constraintTop_toBottomOf="@id/scheduleTimePicker" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>