<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/filmsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/standardPadding"
        android:paddingTop="@dimen/standardPadding"
        android:paddingEnd="@dimen/standardPadding"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/inviteBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/film1"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:src="@drawable/film1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/film1Name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/film1Name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/film1"
                    app:layout_constraintTop_toTopOf="@id/film1" />

                <Button
                    android:id="@+id/film1DetailsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    app:layout_constraintStart_toStartOf="@id/film1Name"
                    app:layout_constraintTop_toBottomOf="@id/film1Name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/film2"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:src="@drawable/film2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/film2Name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/film2Name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/film2"
                    app:layout_constraintTop_toTopOf="@id/film2" />

                <Button
                    android:id="@+id/film2DetailsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    app:layout_constraintStart_toStartOf="@id/film2Name"
                    app:layout_constraintTop_toBottomOf="@id/film2Name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/film3"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:src="@drawable/film3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/film3Name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/film3Name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/film3"
                    app:layout_constraintTop_toTopOf="@id/film3" />

                <Button
                    android:id="@+id/film3DetailsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    app:layout_constraintStart_toStartOf="@id/film3Name"
                    app:layout_constraintTop_toBottomOf="@id/film3Name" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/inviteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inviteBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filmsList" />

</androidx.constraintlayout.widget.ConstraintLayout>